Add user session log (billing purpose) support: REST, manager, DAO, alembic
